# S.L.A.T.E-ATHENA

./: .athena_personalization.json  .copilot-instructions.md  .dockerignore  .gitignore  .gitmodules  .mcp.json  .ollama_env  .slate_fork_intelligence.json  .slate_github_models.json  .slate_release_state.json  .slate_warmup_state.json  AGENTS.md  ATHENA_DESIGN_SYSTEM.md  AUTHOR.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  FORGE.md  INTEGRATION_COMPLETE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SETUP.md  SLATE_ATHENA_ONBOARDING.md  SLATE_ATHENA_SUMMARY.md  constraints-local.txt  current_tasks.json  design-tokens.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.runners.yml  docker-compose.yml  github_actions_onboarding.py  install_claude_plugin.ps1  install_claude_plugin.py  (+10 more)
.agent/rules/: antigravity_rules.md
.agent/workflows/: antigravity.md  slate_system_check.md  slate_task.md  slate_tech_tree.md
.claude/: hooks.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/behaviors/: slate-operator.md  slate-protocols.md
.claude/commands/: slate-diagnose.md  slate-discussions.md  slate-gpu.md  slate-help.md  slate-multirunner.md  slate-runner.md  slate-schematic.md  slate-status.md  slate-workflow.md  slate.md
.claude/skills/: slate-code-review.md  slate-github.md  slate-gpu.md  slate-operator.md  slate-runner.md  slate-status.md  slate-tasks.md  slate-test.md
.copilot/: skills.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  labels.yml  slate.config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: slate.agent.md
.github/prompts/: slate-workflow-hub.prompt.md
.github/workflows/: achievements.yml  agentic.yml  ai-maintenance.yml  ai-training.yml  cd.yml  ci.yml  codeql.yml  contributor-pr.yml  dependabot-auto-merge.yml  dependency-update.yml  deploy.yml  discussion-automation.yml  docker.yml  docs.yml  fork-intelligence.yml  fork-sync.yml  fork-validation.yml  git-intelligence.yml  github-models.yml  gpu-tests.yml  instructions.yml  k8s.yml  label-sync.yml  multi-runner.yml  nightly.yml  pages.yml  powershell.yml  pr.yml  project-automation.yml  publish-package.yml  release.yml  runner-self-heal.yml  runner-test.yml  slate.yml  (+7 more)
.slate_config/: agent_routing.json  model_pref.json  morph.yaml
.slate_fork/: config.json  state.json
.slate_identity/: avatar_state.json
.slate_tech_tree/: tech_tree.json
agents/: install_api.py  runner_api.py  slate_athena_server.py  slate_dashboard_server.py
aurora_core/: slate_github_integration.py  slate_hardware_optimizer.py  slate_runner_manager.py  slate_status.py
aurora_logs/: slate-dashboard-server.jsonl
collections/: slate.collection.yml
helm/: Chart.yaml  values.yaml
instructions/: slate-kubernetes.instructions.md  slate-python.instructions.md  slate-security.instructions.md  slate-typescript.instructions.md
k8s/: agentic-system.yaml  antigravity-bridge.yaml  deploy.ps1  deployments.yaml  discord-bot.yaml  hpa-monitoring.yaml  ingress-gpu.yaml  instruction-controller.yaml  kustomization.yaml  ml-pipeline.yaml  monitoring-crds.yaml  namespace.yaml  network-policy.yaml  nvidia-device-plugin.yaml  pdb.yaml  rbac.yaml  runners-arc.yaml  runners.yaml  secrets.yaml  slate-dashboard.yaml  slate-instructions.yaml  status.ps1  trellis2-generator.yaml
plans/: ROADMAP.md  roadmap.json
prompts/: claude-code-inference.prompt.md  dashboard-sync.prompt.md  deploy-kubernetes.prompt.md  forge-collab.prompt.md  index.json  issue-to-task.prompt.md  pr-review.prompt.md  run-benchmarks.prompt.md  system-health.prompt.md  task-router.prompt.md  workflow-cleanup.prompt.md
scripts/: generate_prompt_index.py  generate_website_schematics.py  install_cuda_toolkit.ps1  post_restart_trellis_setup.py  start-runners.ps1
slate/: __init__.py  action_guard.py  actions_sdk.py  adaptive_instructions.py  athena_voice.py  benchmark_suite.py  claude_agent_sdk_integration.py  claude_code_manager.py  claude_code_validator.py  claude_feedback_layer.py  copilot_agent_bridge.py  copilot_sdk_session.py  copilot_sdk_tools.py  copilot_slate_runner.py  dependency_resolver.py  design_tokens.py  design_tokens_generated.py  discord_federation.py  discord_onboarding.py  discord_security.py  energy_scheduler.py  feature_flags.py  grok_heavy_slate_procedure.py  guided_mode.py  guided_workflow.py  install_copilot_sdk.py  install_tracker.py  instruction_loader.py  integrated_autonomous_loop.py  interactive_tutor.py  k8s_entrypoints.py  k8s_integration.py  mcp_launcher.ps1  mcp_launcher.py  mcp_server.py  ml_orchestrator.py  module_registry.py  monitoring.py  morph_manager.py  permission_gate.py  (+75 more)
slate_web/: control_panel_ui.py  dashboard_template.py  design_system.py  guided_workflow_ui.py  install.html  interactive_experience_ui.py
templates/: CLAUDE.template.md  claude-settings.template.json  copilot-instructions.template.md
tests/: __init__.py  test_actions_sdk.py  test_adaptive_instructions.py  test_claude_agent_sdk_integration.py  test_claude_code_manager.py  test_claude_code_validator.py  test_claude_feedback_layer.py  test_copilot_agent_bridge.py  test_copilot_sdk_session.py  test_copilot_sdk_tools.py  test_dependency_resolver.py  test_dependency_scanner.py  test_design_tokens.py  test_dev_cycle_engine.py  test_discord_bot.py  test_discord_security.py  test_github_achievements.py  test_gpu_compute.py  test_grok_heavy_slate_procedure.py  test_guided_mode.py  test_guided_workflow.py  test_install_copilot_sdk.py  test_instruction_loader.py  test_interactive_api.py  test_interactive_experience.py  test_interactive_tutor.py  test_k8s_entrypoints.py  test_k8s_integration.py  test_lmstudio_integration.py  test_mcp_launcher.py  test_mcp_server.py  test_monitoring.py  test_notification_system.py  test_plugin_diagnose.py  test_project_onboarding.py  test_release.py  test_schematic_api.py  test_slate.py  test_slate_ai_orchestrator.py  test_slate_ai_scheduler.py  (+44 more)
(+212 files in other folders)
